# pdf_reader

./: README.md  pyproject.toml  requirements.txt
pdf_reader/: config.yml  main.py
